Fixed the content paddings and alignments

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 body {
     color: black;
     background-color: white;
-    padding: 16px;
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
+    width: 100vw;
 }
 
 a {
@@ -45,18 +45,20 @@ button {
 }
 
 .container {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    gap: 16px;
+    box-sizing: border-box;
+    width: calc(100vw - 80px);
+    margin-left: 16px;
+    margin-right: 16px;
+    padding-top: 16px;
+}
+
+.col{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: 16px;
-    height: 90vh;
-    align-items: center;
-    gap: 16px;
-    width: 340px;
-    }
-
-.container div{
-    width: 340px;
 }
 
 .section-header {
@@ -79,7 +81,6 @@ button {
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
-    width: auto;
 }
 
 .category div i {
@@ -115,16 +116,12 @@ button {
 }
 
 @media screen and (max-width: 450px) {
-    body {
-        height: none;
-    }
-
+    
     .container {
         display: flex;
-        flex-direction: column;
         flex-wrap: nowrap;
         gap: 16px;
-        width: 340px;
+        width: 100%;
         align-items: center;
     }
 
